# audio-song-recommender

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
examples/: curl_api_examples.sh
scripts/: clap_embed.py  eval_genre_purity.py  run_fma_small_audio.sh  run_fma_small_fast_features.sh  run_toy_demo.sh
src/music_similarity_rec/: __init__.py  api.py  cli.py  config.py  datasets.py  features.py  fma.py  index.py  metadata.py  paths.py  recommender.py  schemas.py  toydata.py
tests/: test_features.py  test_index.py  test_toy_pipeline.py
